--- a/dareProject/templates/base.html
+++ b/dareProject/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,10 +25,14 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+
     {% block style %} {% endblock %}
   </head>
   <body>
-    {% block body %} {% endblock %}
+    {% include 'nav.html' %} 
+    {% block body %} {% endblock %} 
+    {% include 'footer.html' %}
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </html>
