Update hero section links to use Django URL template tags and add empty CSS files for about and contact pages

--- a/dareProject/templates/home_comps/hero.html
+++ b/dareProject/templates/home_comps/hero.html
@@ -10,8 +10,8 @@
             college dare experience.
           </p>
           <div>
-            <a href="#features" class="btn-neon me-3">INITIALIZE</a>
-            <a href="#about" class="btn-neon btn-neon-pink">DISCOVER</a>
+            <a href="{% url 'features' %}" class="btn-neon me-3">INITIALIZE</a>
+            <a href="{% url 'about' %}" class="btn-neon btn-neon-pink">DISCOVER</a>
           </div>
         </div>
       </div>
