Add show dares functionality with URL routing, view, and template

--- a/dareProject/templates/home.html
+++ b/dareProject/templates/home.html
@@ -18,7 +18,7 @@
           </p>
           <div>
             <a href="{% url 'create_dare' %}" class="btn-neon me-3">INITIALIZE</a>
-            <a href="{% url 'about' %}" class="btn-neon btn-neon-pink"
+            <a href="{% url 'show_dares' %}" class="btn-neon btn-neon-pink"
               >DISCOVER</a
             >
           </div>
