--- a/dareProject/templates/home.html
+++ b/dareProject/templates/home.html
@@ -92,7 +92,7 @@
       <div class="col-lg-8 mx-auto">
         <h2>READY TO JACK IN?</h2>
         <p>The matrix awaits. Your legend begins now.</p>
-        <a href="#" class="btn-neon btn-neon-pink">ENTER THE GRID</a>
+        <a href="{% url 'account' %}" class="btn-neon btn-neon-pink">ENTER THE GRID</a>
       </div>
     </div>
   </div>
