--- a/dareProject/templates/accounts/register.html
+++ b/dareProject/templates/accounts/register.html
@@ -1,6 +1,12 @@
-{% extends 'base.html' %} {% load static %} {% block style %}
+{% extends 'base.html' %} 
+
+{% load static %} 
+
+{% block style %}
 <link rel="stylesheet" href="{% static 'css/create_dare.css' %}" />
-{% endblock %} {% block body %}
+{% endblock %} 
+
+{% block body %}
 <section class="create-dare-hero">
   <div class="container text-center">
     <h1 class="create-dare-title">
