Fix user registration checks, update login view rendering, and enhance message display in registration template

--- a/dareProject/templates/accounts/login.html
+++ b/dareProject/templates/accounts/login.html
@@ -34,7 +34,7 @@
           <div class="text-center mt-3">
             <p style="color: #a3aed6;">
               Don't have an account? 
-              <a href="{% url 'register' %}" style="color: var(--neon-pink); text-decoration: none; text-shadow: 0 0 6px var(--neon-pink);">Sign Up</a>
+              <a href="{% url 'account' %}" style="color: var(--neon-pink); text-decoration: none; text-shadow: 0 0 6px var(--neon-pink);">Sign Up</a>
             </p>
           </div>
         </div>
